<resources>
    <string name="app_name">Family Contacts</string>
    <string name="title_activity_verification">VerificationActivity</string>
    <string name="text_view_phone_number">My Phone Number</string>
    <string name="text_view_verification_code">Verification Code</string>
    <string name="button_phone_verify">Verify</string>
    <string name="button_phone_confirm">Confirm</string>
    <string name="action_settings">Settings</string>

    <string name="empty"></string>
    <string name="title_activity_contact_add">ContactAddActivity</string>

    <string name="button_contact_cancel">Cancel</string>
    <string name="button_contact_confirm">Confirm</string>
    <string name="button_contact_add_image">Add Photo</string>
    <string name="title_activity_contacts_list">ContactsListActivity</string>
    <string name="title_activity_contact_view">ContactViewActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
